--- a/Linear-Algebra/Linear-Algebra.tex
+++ b/Linear-Algebra/Linear-Algebra.tex
@@ -991,6 +991,20 @@ be a Vector space over field F.
             $W_1 + W_2$ is said to be the direct sum of $V$ if and 
             only if $W_1 \cap W_2 = \{ 0 \}$
         \end{theorem}
+        
+        \noindent \textbf{Example:} Let $V = \mathbb{R}^3$ and $W_1 =
+        \{ (0, y, z) : y, z \in \mathbb{R} \}$ and $W_2 = \{ (x, y, 0) 
+        : x, y \in \mathbb{R} \}$. Is $V$ the direct sum of $W_1$ 
+        and $W_2$.
+
+        \noindent\textbf{Solution:} $W_1 \cap W_2 = \{ (0, y, 0) : y \in 
+        \mathbb{R} \}$. $V$ is not a direct sum of $W_1$ and $W_2$.
+        Also there is no unique sum for every element of $V$. That is
+        \begin{align*}
+            (1, -2, 1) &= (0, -2, 1) + (1, 0, 0) \\
+                       &= (0, -1, 1) + (1, -1, 0) \\
+                       & \vdots
+        \end{align*}
 
         \setlength{\fboxsep}{1em}
         \noindent\fbox{
@@ -1058,11 +1072,14 @@ be a Vector space over field F.
         \end{enumerate}
     
     \subsection{Null Space (Kernel) and Range Space of $T$}
-        Let $T$ be a linear transformation from $V$ to $W$, 
-        $T: V \rightarrow W$. Then 
-        $$ N(T) = \text{ker($T$)} = \{ x \in V \; | \; T(x) = 0 \} $$
+        \begin{definition}
+            Let $T$ be a linear transformation from $V$ to $W$, 
+            $T: V \rightarrow W$. Then 
+            $$ N(T) = \textup{ker($T$)} = \{ x \in V \; | \; T(x) = 0 \} $$
+            is called the \textbf{Null Space or Kernel of $T$}
+        \end{definition}
         
-        \textbf{Note:} Null space of any linear transformation is always
+        \noindent\textbf{Note:} Null space of any linear transformation is always
         non empty because $T(0)$ is always equal to $0$ for any linear 
         transformation $T$.
 
@@ -1091,7 +1108,29 @@ be a Vector space over field F.
         
         \noindent \textbf{For a finite dimensional vector space 
         $V$, dim($N(T)$) $\le$ dim($V$)}
-    \subsection{Examples}
+        
+        \begin{definition}
+            Let $V$ and $W$ be finite dimensional vector spaces over the
+            same field $F$ and $T:V \to W$ be a linear transformation,
+            then
+            $$R(T) = \{ w \in W \; | \; \exists \; v \in V, T(v) = w \}$$
+            is called the \textbf{Range Space of $T$}
+        \end{definition}
+
+        \begin{theorem}
+            Let $T: V \to W$ be a linear transformation where $V$ 
+            and $W$ are finite dimensional vector spaces over same
+            field $F$, then the range space of $T$, $R(T)$ is a 
+            subpace of $W$. i.e $R(T) \le W$
+        \end{theorem}
+        \begin{proof}
+            Very simple, similar to null space being a subspace of $V$
+        \end{proof}
+
+        \noindent\textbf{Note: }The dimension of range space of $T$
+        is denoted as $\rho$($T$) 
+        
+    \subsection{Linear Transformation Examples}
         \begin{enumerate}[label=\textbf{\arabic*}]
             \item $T: P_4(x) \rightarrow P_3(x)$ and 
             $T\left(p(x)\right) = \displaystyle\int_0^x p(t) dt$
@@ -1177,6 +1216,20 @@ be a Vector space over field F.
             skipped.
         \end{proof}
 
+        \setlength{\fboxsep}{1em}
+        \noindent\fbox{
+            \begin{minipage}[c]{0.93\linewidth}
+                \textbf{Note: }
+                \begin{itemize}
+                    \item For homogeneous systems dim($R(T)$) = $n - r$
+                    \item For non-homogeneous systems dim($R(T)$) = $n - r + 1$
+                \end{itemize}
+                where $r$ is the rank of the coefficient matrix 
+                and $n$ is the number of variables (from the 
+                order $m\times n$)
+            \end{minipage}
+        }
+
     \subsection{Algebra of Linear Transformation}
         \begin{theorem}
             Let $T: V \rightarrow W and S: V \rightarrow W$ be two linear
@@ -1206,7 +1259,23 @@ be a Vector space over field F.
                                                 &= \alpha (T \circ S)(u) + \beta (T \circ S)(v)
             \end{align*}
         \end{proof}
-    
+
+        \begin{definition}
+            \textbf{Singular Map: }Let $V$ and $W$ be vector subspaces
+            over the same field $F$ and $T: V \to W$ be a linear 
+            transformation then $T$ is called a singular map if there
+            exists a non zero vector $x \in V$ such that $T(x) = 0$
+        \end{definition}
+
+        \begin{definition}
+            \textbf{Non-Singular Map: }Let $V$ and $W$ be vector subspaces
+            over the same field $F$ and $T: V \to W$ be a linear 
+            transformation then $T$ is called a singular map if there
+            does not exist a non zero vector $x \in V$ such that 
+            $T(x) = 0$
+        \end{definition}
+        \noindent\textbf{Note: }if $\eta(T) > 0$, then $T$ is a singular map
+        and if $\eta(T) = 0$ then $T$ is a non-singular map
     \subsection{Invertible Maps}
         \begin{theorem}
             Let $T: V \rightarrow V$ be a linear transformation where $V$
