RESOLVE: Rebase conflicts

--- a/Linear-Algebra/Linear-Algebra.tex
+++ b/Linear-Algebra/Linear-Algebra.tex
@@ -1422,9 +1422,11 @@ be a Vector space over field F.
         We know that $T(v) = \lambda v \implies (T-\lambda I)v = 0$.
         Find the null space of the transformation $(T-\lambda I)$. 
         
-        OR
+        \begin{center}
+            OR
+        \end{center}
         
-        Since $T: V \to V$, take any matrix representation of $T$
+        \noindent Since $T: V \to V$, take any matrix representation of $T$
         w.r.t to any basis $B$, i.e $[T]_B = A$ and then plug it in
         the equation $(T-\lambda I)v = 0$. We are looking for non
         zero $v$'s, if any exists, hence for that we should make the
