CHORE: Replace arrow vectors with bold vectors

--- a/Linear-Algebra/Linear-Algebra.tex
+++ b/Linear-Algebra/Linear-Algebra.tex
@@ -13,6 +13,8 @@
 \newtheorem{definition}{Definition}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 
+\renewcommand{\vec}[1]{\bm{#1}}
+
 \newcommand{\floor}[1]
 {
     \left\lfloor #1 \right\rfloor
